45
================

06/12/21 Last movement on person using latest ID instead of date
06/12/21 Animal age not updating on all animal tabs
05/12/21 Make dark mode easier to read, use qs to force theme reload
04/12/21 Add OR support to online form showif
03/12/21 Update to JQueryUI 1.13.0
02/12/21 Regenerate light theme with flat textures
01/12/21 Dump ancient/ugly JQUI themes, map them to ASM light/dark
01/12/21 Rewrite mobile signing pad into bootstrap #1068
01/12/21 PetRescue/SavourLife - use retailer postcode if available
01/12/21 Dark mode for SQL/HTML editing, better shadows
30/11/21 Update Czech translation (Jiří Podhorecký)
30/11/21 Fix changelog display in dark mode
29/11/21 Add facility to convert images into PDFs on the media tab #1046
29/11/21 Move media image menu items into a menu button to save space #1046
29/11/21 Add $ASK LOOKUP and $ASK PAYMENTMETHOD #525
28/11/21 Add euthanized non-shelter animals section to annual figures
27/11/21 Add ASM dark mode theme
26/11/21 Fix regression in assigning values in online form multi-lookups
24/11/21 Allow coat type on add animal screen #308
24/11/21 Include time info for wp token generated tables (eg: ANIMALLOGS)
23/11/21 Special form fields should not be mandatory if they are not visible
22/11/21 AdoptAPet: Send $0 adoption fees as blank
22/11/21 Fix vacc/neutered non-shelter by type sections of annual figures
22/11/21 Always send adoptapet DOB as M/D/Y instead of locale (en_MX uses D/M/Y)
20/11/21 Truncate form name and shorten preview for online form emails
19/11/21 AdoptAPet want fees in dollars rather than cents
18/11/21 Cope with entering times in HH:MM:SS format as well as HH:MM
18/11/21 Fix use of excludefrombulkemail in online forms
18/11/21 Use utf-8 for locale file encodings (smaller)
17/11/21 Allow searching of log records #15
17/11/21 Add extra adoptapet fields for Weight/DOB/Fee #461
16/11/21 Make entering times more forgiving when just numbers entered