@@ -64,6 +64,7 @@
 	padding: 5px;
 }
 
+/* RRT: Custom classes added for ASM to lay list elements out left to right */
 .bsmListSortableCustom li {
   cursor: move;
   border-radius: 5px;
@@ -90,7 +91,11 @@
   color: #000;
   cursor: move;
   line-height: 1em;
-  float: left;
+  /* RRT: 
+   * inline-block below is a workaround for a JQueryUI 1.13.0 regression in Sortable.
+   * it fails with zero height elements - like anything with a float
+   * float: left */
+  display: inline-block; vertical-align: bottom;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px; 
